force-app/main/default/objects/Custom_Pricing__c/Custom_Pricing__c.object-meta.xml
<CustomObject>
    <label>Custom Pricing</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Custom Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>