force-app/main/default/objects/Custom_Pricing__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geolocation</valueSetName>
    </valueSet>
</CustomField>