force-app/main/default/objects/Custom_Pricing__c/fields/Max_Volume__c.field-meta.xml
<CustomField>
    <fullName>Max_Volume__c</fullName>
    <label>Max Volume</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>