force-app/main/default/objects/Custom_Pricing__c/fields/Min_Volume__c.field-meta.xml
<CustomField>
    <fullName>Min_Volume__c</fullName>
    <label>Min Volume</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>