force-app/main/default/objects/Custom_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Geolocation__c</columns>
    <columns>Min_Volume__c</columns>
    <columns>Max_Volume__c</columns>
    <columns>Price__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>